--- a/dada/extras/documentation/pod_source/changes_4_x.pod
+++ b/dada/extras/documentation/pod_source/changes_4_x.pod
@@ -8,9 +8,9 @@
 
 =head2 Features 4.6.0 Beta 1 
 
-=head3 New Plugin: Sending Monitor
+=head3 New Plugin: Mailing Monitor
 
-The, B<Sending Monitor> plugin replaces the, C<auto_pickup.pl> extension, has a nicer list control panel interface and much more simplified instructions. 
+The, B<Mailing Monitor> plugin replaces the, C<auto_pickup.pl> extension, has a nicer list control panel interface and much more simplified instructions. 
 
 The C<auto_pickup.pl> extension will still be shipped with Dada Mail, but will simply be a redirect to this new plugin. 
 
