--- a/dada/extras/documentation/pod_source/install_dada_mail.pod
+++ b/dada/extras/documentation/pod_source/install_dada_mail.pod
@@ -75,21 +75,22 @@ Fill out the form fields of the installer, like you were doing a installation. C
 
 The installer will refresh the screen with the same configuration screen, but with B<two new options>, under another warning that the installer couldn't create the, C<.dada_files> directory. 
 
-=head4 Use the existing directory structure and configuration file, ignoring the configuration below.
-
-The first option, I<Use the existing directory structure and configuration file, ignoring the configuration below.> will leave your Dada Mail configuration alone, and simply allow you to upgrade to the latest version of Dada Mail.
-
-If you have any plugins/extensions that you've installed with the installer from a previous installation, the installer will try its best to at least change the permissions of each plugin/extension you have already installed to continue working. It's possible that the installer I<cannot> detect a plugin/extension install, so you may have to reinstall the plugin/extension manually. 
 
 =head4 Use the existing directory structure, but create a new configuration file, using the configuration below
 
-The second option, I<Use the existing directory structure, but create a new configuration file, using the configuration below> allows you to upgrade your current Dada Mail, while using a fresh copy of the C<.dada_config> file. 
+The first option, I<Use the existing directory structure, but create a new configuration file, using the configuration below> allows you to upgrade your current Dada Mail, while using a fresh copy of the C<.dada_config> file. 
 
-This second option may be more useful in helping you keep a current C<.dada_config> file. In many cases, upgrades to Dada Mail between minor dot releases (for example, v4.B<5>.0 and v4.B<6>.0 come with changes to the default C<.dada_config> file. These changes may include incompatibilities if you use your current C<.dada_config> file. 
+This option may be useful in helping you keep a current C<.dada_config> file. In many cases, upgrades to Dada Mail between minor dot releases (for example, v4.B<5>.0 and v4.B<6>.0 come with changes to the default C<.dada_config> file. These changes may include incompatibilities if you use your current C<.dada_config> file. 
 
 The downside of using this option is that any changes you've personally made to your C<.dada_config> file will be lost. You still may manually move over your customizations from the old C<.dada_config> file, which is backed up for you and the new C<.dada_config> file. 
 
 Make sure to double check the Dada Mail changelog and fix any incompatibility between versions. Currently, this will be something you'll have to do manually.
+
+=head4 Use the existing directory structure and configuration file, ignoring the configuration below.
+
+The second option, I<Use the existing directory structure and configuration file, ignoring the configuration below.> will leave your Dada Mail configuration alone, and simply allow you to upgrade to the latest version of Dada Mail.
+
+If you have any plugins/extensions that you've installed with the installer from a previous installation, the installer will I<try> its best to at least change the permissions of each plugin/extension you have already installed to continue working. It's possible that the installer I<cannot> detect a plugin/extension install, so you may have to reinstall the plugin/extension manually.
 
 =head2 Dada Mail URL
 
