--- a/dada/extras/documentation/pod_source/changes_4_x.pod
+++ b/dada/extras/documentation/pod_source/changes_4_x.pod
@@ -2,11 +2,11 @@
 
 =head1 Dada Mail Changelog for version 4.x.x
 
-=head1 4.6.0 Beta 2
+=head1 4.6.0
 
-=head2 Summary 4.6.0 Beta 2
+=head2 Summary 4.6.0
 
-=head2 Features 4.6.0 Beta 2 
+=head2 Features 4.6.0 
 
 =head2 New Experimental Feature: controlling the behavior of the List Unsubscribe Link
 
@@ -54,7 +54,7 @@ plugins and extensions that come with Dada Mail.
 
 The installer also gives you the option, when used to upgrade your current Dada Mail,  to either keep your current C<.dada_config> file, or to create a new C<.dada_config> file,  while also keeping your current C<.dada_files> directory structure and contents. 
 
-=head2 Changes 4.6.0 Beta 2 
+=head2 Changes 4.6.0 
 
 =head3 Default Mailing List Message Templates
 
@@ -70,7 +70,7 @@ The freshest GeoIP data has been included with Dada Mail
 The Facebook link has been replaced by the Facebook, B<Like> button and 
 the, B<Plus Google> button has been added. 
 
-=head2 Bug Fixes 4.6.0 Beta 2 
+=head2 Bug Fixes 4.6.0 
 
 =head3 POP3 Login Paramaters not getting passed correctly?
 
